--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Pathfinders</string>
+
+    <!-- Buildings -->
+    <string name="buildings">List of Buildings</string>
+
+    <!-- onClick -->
+    <string name="transition">goToRooms</string>
 </resources>
