--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
 
     <!-- onClick -->
     <string name="transition">goToRooms</string>
+    <string name="title_activity_room_list">RoomListActivity</string>
 </resources>
