--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Pathfinders</string>
+    <string name="app_name">Pathfinder</string>
 
     <!-- Buildings -->
     <string name="buildings">List of Buildings</string>
