Added Activity to put navigation instructions in.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <!-- onClick -->
     <string name="transition">goToRooms</string>
     <string name="title_activity_room_list">RoomListActivity</string>
+    <string name="title_activity_navigation">NavigationActivity</string>
 </resources>
