--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="transition">goToRooms</string>
     <string name="title_activity_room_list">RoomListActivity</string>
     <string name="title_activity_navigation">NavigationActivity</string>
+    <string name="title_activity_entrance_list">EntranceListActivity</string>
 </resources>
